[gd_scene load_steps=2 format=1]

[ext_resource path="res://monster_maker.gd" type="Script" id=1]

[node name="Monster" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="info" type="PanelContainer" parent="."]

margin/left = 10.0
margin/top = 10.0
margin/right = 170.0
margin/bottom = 62.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="info"]

margin/left = 4.0
margin/top = 8.0
margin/right = 156.0
margin/bottom = 48.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0

[node name="name_label" type="Label" parent="info/box"]

margin/right = 152.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
text = "Monster Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name_edit" type="LineEdit" parent="info/box"]

margin/top = 17.0
margin/right = 152.0
margin/bottom = 40.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
text = ""
max_length = 0
editable = true
secret = false

[node name="stats" type="PanelContainer" parent="."]

anchor/top = 3
anchor/bottom = 3
margin/left = 10.0
margin/top = -70.0
margin/right = 170.0
margin/bottom = -230.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
__meta__ = { "_editor_collapsed":true }

[node name="box" type="HBoxContainer" parent="stats"]

margin/left = 4.0
margin/top = 8.0
margin/right = 156.0
margin/bottom = 156.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="stats" type="VBoxContainer" parent="stats/box"]

margin/right = 116.0
margin/bottom = 148.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="Label" type="Label" parent="stats/box/stats"]

margin/right = 116.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "STATS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="strength" type="HBoxContainer" parent="stats/box/stats"]

margin/top = 17.0
margin/right = 116.0
margin/bottom = 40.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="Label" type="Label" parent="stats/box/stats/strength"]

margin/top = 5.0
margin/right = 50.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "Strength"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="stats/box/stats/strength"]

margin/left = 54.0
margin/right = 116.0
margin/bottom = 23.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
range/min = 3.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="magic" type="HBoxContainer" parent="stats/box/stats"]

margin/top = 44.0
margin/right = 116.0
margin/bottom = 67.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="stats/box/stats/magic"]

margin/top = 5.0
margin/right = 50.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "Magic"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="stats/box/stats/magic"]

margin/left = 54.0
margin/right = 116.0
margin/bottom = 23.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
range/min = 3.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="vitality" type="HBoxContainer" parent="stats/box/stats"]

margin/top = 71.0
margin/right = 116.0
margin/bottom = 94.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="stats/box/stats/vitality"]

margin/top = 5.0
margin/right = 50.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "Vitality"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="stats/box/stats/vitality"]

margin/left = 54.0
margin/right = 116.0
margin/bottom = 23.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
range/min = 3.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="spirit" type="HBoxContainer" parent="stats/box/stats"]

margin/top = 98.0
margin/right = 116.0
margin/bottom = 121.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="stats/box/stats/spirit"]

margin/top = 5.0
margin/right = 50.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "Spirit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="stats/box/stats/spirit"]

margin/left = 54.0
margin/right = 116.0
margin/bottom = 23.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
range/min = 3.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="agility" type="HBoxContainer" parent="stats/box/stats"]

margin/top = 125.0
margin/right = 116.0
margin/bottom = 148.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="stats/box/stats/agility"]

margin/top = 5.0
margin/right = 50.0
margin/bottom = 18.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "Agility"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="stats/box/stats/agility"]

margin/left = 54.0
margin/right = 116.0
margin/bottom = 23.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
range/min = 3.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="level" type="PanelContainer" parent="."]

margin/left = 180.0
margin/top = 10.0
margin/right = 340.0
margin/bottom = 62.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="box" type="VBoxContainer" parent="level"]

margin/left = 4.0
margin/top = 8.0
margin/right = 156.0
margin/bottom = 74.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="Label" type="Label" parent="level/box"]

margin/right = 152.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Level"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="level" type="SpinBox" parent="level/box"]

margin/top = 17.0
margin/right = 152.0
margin/bottom = 40.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="boss" type="CheckBox" parent="level/box"]

margin/top = 44.0
margin/right = 152.0
margin/bottom = 66.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = true
text = "Boss"
flat = false
align = 0

[node name="hpmp" type="PanelContainer" parent="."]

margin/left = 10.0
margin/top = 240.0
margin/right = 130.0
margin/bottom = 310.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="hpmp"]

margin/left = 4.0
margin/top = 8.0
margin/right = 116.0
margin/bottom = 79.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="hp" type="HBoxContainer" parent="hpmp/box"]

margin/right = 112.0
margin/bottom = 13.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="hpmp/box/hp"]

margin/right = 54.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="hpmp/box/hp"]

margin/left = 58.0
margin/right = 112.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mp" type="HBoxContainer" parent="hpmp/box"]

margin/top = 17.0
margin/right = 112.0
margin/bottom = 30.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="hpmp/box/mp"]

margin/right = 54.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "MP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="hpmp/box/mp"]

margin/left = 58.0
margin/right = 112.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="hpmp/box"]

margin/top = 34.0
margin/right = 112.0
margin/bottom = 37.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="xp" type="HBoxContainer" parent="hpmp/box"]

margin/top = 41.0
margin/right = 112.0
margin/bottom = 54.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="hpmp/box/xp"]

margin/right = 54.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "XP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="hpmp/box/xp"]

margin/left = 58.0
margin/right = 112.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gp" type="HBoxContainer" parent="hpmp/box"]

margin/top = 58.0
margin/right = 112.0
margin/bottom = 71.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="hpmp/box/gp"]

margin/right = 54.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "GP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="hpmp/box/gp"]

margin/left = 58.0
margin/right = 112.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="derived" type="PanelContainer" parent="."]

margin/left = 10.0
margin/top = 330.0
margin/right = 250.0
margin/bottom = 430.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
__meta__ = { "_editor_collapsed":true }

[node name="box" type="GridContainer" parent="derived"]

margin/left = 4.0
margin/top = 8.0
margin/right = 236.0
margin/bottom = 96.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
custom_constants/hseparation = 16
columns = 2

[node name="attack_power" type="HBoxContainer" parent="derived/box"]

margin/right = 107.0
margin/bottom = 14.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/attack_power"]

margin/right = 51.0
margin/bottom = 13.0
hint/tooltip = "Attack Power"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "AP"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/attack_power"]

margin/left = 55.0
margin/right = 107.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="magic_attack_power" type="HBoxContainer" parent="derived/box"]

margin/left = 123.0
margin/right = 232.0
margin/bottom = 14.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/magic_attack_power"]

margin/right = 52.0
margin/bottom = 13.0
hint/tooltip = "Magic Attack Power"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "MAP"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/magic_attack_power"]

margin/left = 56.0
margin/right = 109.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="accuracy" type="HBoxContainer" parent="derived/box"]

margin/top = 18.0
margin/right = 107.0
margin/bottom = 32.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/accuracy"]

margin/right = 51.0
margin/bottom = 13.0
hint/tooltip = "Accuracy"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "ACC"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/accuracy"]

margin/left = 55.0
margin/right = 107.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="magic_accuracy" type="HBoxContainer" parent="derived/box"]

margin/left = 123.0
margin/top = 18.0
margin/right = 232.0
margin/bottom = 32.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/magic_accuracy"]

margin/right = 52.0
margin/bottom = 13.0
hint/tooltip = "Magic Accuracy"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "MACC"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/magic_accuracy"]

margin/left = 56.0
margin/right = 109.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="evade" type="HBoxContainer" parent="derived/box"]

margin/top = 36.0
margin/right = 107.0
margin/bottom = 50.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/evade"]

margin/right = 51.0
margin/bottom = 13.0
hint/tooltip = "Evasion"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "EVA"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/evade"]

margin/left = 55.0
margin/right = 107.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resist" type="HBoxContainer" parent="derived/box"]

margin/left = 123.0
margin/top = 36.0
margin/right = 232.0
margin/bottom = 50.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/resist"]

margin/right = 52.0
margin/bottom = 13.0
hint/tooltip = "Resistance"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "RES"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/resist"]

margin/left = 56.0
margin/right = 109.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="speed" type="HBoxContainer" parent="derived/box"]

margin/top = 54.0
margin/right = 107.0
margin/bottom = 68.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/speed"]

margin/right = 51.0
margin/bottom = 13.0
hint/tooltip = "Speed"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "SPD"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/speed"]

margin/left = 55.0
margin/right = 107.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="critical" type="HBoxContainer" parent="derived/box"]

margin/left = 123.0
margin/top = 54.0
margin/right = 232.0
margin/bottom = 68.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/critical"]

margin/right = 52.0
margin/bottom = 13.0
hint/tooltip = "Critical Chance"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "CRIT"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/critical"]

margin/left = 56.0
margin/right = 109.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tech" type="HBoxContainer" parent="derived/box"]

margin/top = 72.0
margin/right = 107.0
margin/bottom = 86.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="derived/box/tech"]

margin/right = 51.0
margin/bottom = 13.0
hint/tooltip = "Critical Chance"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
text = "TECH"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="derived/box/tech"]

margin/left = 55.0
margin/right = 107.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="save" type="Button" parent="."]

margin/left = 350.0
margin/top = 10.0
margin/right = 409.0
margin/bottom = 29.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "SAVE"
flat = false

[connection signal="text_entered" from="info/box/name_edit" to="." method="_on_name_edit_text_entered"]

[connection signal="value_changed" from="level/box/level" to="." method="_on_level_value_changed"]

[connection signal="toggled" from="level/box/boss" to="." method="_on_boss_toggled"]


